--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -2085,6 +2085,13 @@ Elements</string>
                             </property>
                            </spacer>
                           </item>
+                          <item row="11" column="1">
+                           <widget class="QProgressBar" name="pbr_run_pushover">
+                            <property name="value">
+                             <number>0</number>
+                            </property>
+                           </widget>
+                          </item>
                          </layout>
                         </item>
                        </layout>
