--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -2265,77 +2265,77 @@ Elements</string>
                    <item row="0" column="0">
                     <layout class="QFormLayout" name="formLayout_5">
                      <item row="0" column="0">
-                      <widget class="QLabel" name="label">
+                      <widget class="QLabel" name="lbl_ida_first_intensity">
                        <property name="text">
                         <string>First intensity:</string>
                        </property>
                       </widget>
                      </item>
                      <item row="0" column="1">
-                      <widget class="QDoubleSpinBox" name="doubleSpinBox"/>
+                      <widget class="QDoubleSpinBox" name="spx_ida_first_intensity"/>
                      </item>
                      <item row="1" column="0">
-                      <widget class="QLabel" name="label_2">
+                      <widget class="QLabel" name="lbl_ida_hunting_increment_step">
                        <property name="text">
                         <string>Hunting increment step (g):</string>
                        </property>
                       </widget>
                      </item>
                      <item row="1" column="1">
-                      <widget class="QDoubleSpinBox" name="doubleSpinBox_2"/>
+                      <widget class="QDoubleSpinBox" name="spx_ida_hunting_increment_step"/>
                      </item>
                      <item row="2" column="0">
-                      <widget class="QLabel" name="label_3">
+                      <widget class="QLabel" name="lbl_ida_drift_capacity">
                        <property name="text">
                         <string>Drift capacity (%):</string>
                        </property>
                       </widget>
                      </item>
                      <item row="2" column="1">
-                      <widget class="QDoubleSpinBox" name="doubleSpinBox_3"/>
+                      <widget class="QDoubleSpinBox" name="spx_ida_drift_capacity"/>
                      </item>
                      <item row="3" column="0">
-                      <widget class="QLabel" name="label_4">
+                      <widget class="QLabel" name="lbl_ida_maximum_number_runs">
                        <property name="text">
                         <string>Maximum number of runs:</string>
                        </property>
                       </widget>
                      </item>
                      <item row="3" column="1">
-                      <widget class="QSpinBox" name="spinBox_2"/>
+                      <widget class="QSpinBox" name="spx_ida_maximum_number_runs"/>
                      </item>
                      <item row="4" column="0">
-                      <widget class="QLabel" name="label_5">
+                      <widget class="QLabel" name="lbl_ida_seismic_records_list_file">
                        <property name="text">
                         <string>Seismic records list file:</string>
                        </property>
                       </widget>
                      </item>
                      <item row="4" column="1">
-                      <widget class="QLineEdit" name="lineEdit"/>
+                      <widget class="QLineEdit" name="txt_ida_seismic_records_list_file"/>
                      </item>
                      <item row="5" column="0">
-                      <widget class="QLabel" name="label_6">
+                      <widget class="QLabel" name="lbl_ida_output_ida_file">
                        <property name="text">
                         <string>Output IDA file:</string>
                        </property>
                       </widget>
                      </item>
                      <item row="5" column="1">
-                      <widget class="QLineEdit" name="lineEdit_2"/>
+                      <widget class="QLineEdit" name="txt_ida_output_ida_file"/>
                      </item>
                      <item row="6" column="0">
-                      <widget class="QLabel" name="label_7">
+                      <widget class="QLabel" name="lbl_ida_intensity_measure">
                        <property name="text">
                         <string>Intensity measure (IM):</string>
                        </property>
                       </widget>
                      </item>
                      <item row="6" column="1">
-                      <widget class="QComboBox" name="comboBox"/>
+                      <widget class="QComboBox" name="txt_ida_intensity_measure"/>
                      </item>
                      <item row="8" column="1">
-                      <widget class="QPushButton" name="pushButton">
+                      <widget class="QPushButton" name="btn_run_idad">
                        <property name="text">
                         <string>Run IDA</string>
                        </property>
