Changing variable names and texts for CSS Graphs

--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -35,7 +35,7 @@
         <item>
          <widget class="QTabWidget" name="twd_principal">
           <property name="currentIndex">
-           <number>4</number>
+           <number>5</number>
           </property>
           <widget class="QWidget" name="tab_frame_data">
            <attribute name="title">
@@ -2479,15 +2479,15 @@ Elements</string>
             </item>
            </layout>
           </widget>
-          <widget class="QWidget" name="tab_css_results">
+          <widget class="QWidget" name="tab_css_graphs">
            <attribute name="title">
-            <string>CSS Results</string>
+            <string>CSS Graphs</string>
            </attribute>
            <layout class="QGridLayout" name="gridLayout_51">
             <item row="0" column="0">
-             <layout class="QVBoxLayout" name="lay_css_results" stretch="20,1">
+             <layout class="QVBoxLayout" name="lay_css_graphs" stretch="20,1">
               <item>
-               <layout class="QHBoxLayout" name="lay_css_results_plots">
+               <layout class="QHBoxLayout" name="lay_css_graphs_plots">
                 <item>
                  <widget class="MplWidget" name="mp_hazard_css_sdr_max" native="true"/>
                 </item>
@@ -2506,7 +2506,7 @@ Elements</string>
                </layout>
               </item>
               <item>
-               <layout class="QHBoxLayout" name="lay_css_results_controls"/>
+               <layout class="QHBoxLayout" name="lay_css_graphs_controls"/>
               </item>
              </layout>
             </item>
