--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -2574,26 +2574,36 @@ Elements</string>
                </layout>
               </item>
               <item>
-               <layout class="QHBoxLayout" name="lay_css_results_controls" stretch="1,1,1,1,3,20">
+               <layout class="QHBoxLayout" name="lay_css_results_controls" stretch="1,1,1,1,1,1,1,1,1,1,1,1,10">
                 <item>
-                 <widget class="QLabel" name="lbl_input_css_file2">
+                 <widget class="QLabel" name="lbl_css_results_input_css_file">
                   <property name="text">
                    <string>Input CSS file:</string>
                   </property>
                  </widget>
                 </item>
                 <item>
-                 <widget class="QLineEdit" name="txt_input_css_file2"/>
+                 <widget class="QLineEdit" name="txt_css_results_input_css_file"/>
                 </item>
                 <item>
-                 <widget class="QLabel" name="lbl_choose_fability_curve2">
+                 <widget class="QLabel" name="lbl_css_results_choose_fability_curve">
                   <property name="text">
                    <string>Choose Fragility Curve:</string>
                   </property>
                  </widget>
                 </item>
                 <item>
-                 <widget class="QLineEdit" name="txt_sdr_max_curves2"/>
+                 <widget class="QComboBox" name="cbx_css_results_choose_fragility_curve"/>
+                </item>
+                <item>
+                 <widget class="QLabel" name="label">
+                  <property name="text">
+                   <string>Limit stage %:</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QLineEdit" name="lineEdit"/>
                 </item>
                 <item>
                  <widget class="QPushButton" name="btn_ida_results_plot2">
@@ -2601,6 +2611,33 @@ Elements</string>
                    <string>Plot</string>
                   </property>
                  </widget>
+                </item>
+                <item>
+                 <widget class="QLabel" name="label_2">
+                  <property name="text">
+                   <string>Hazard Level to plot:</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QLineEdit" name="lineEdit_2"/>
+                </item>
+                <item>
+                 <widget class="QLabel" name="label_3">
+                  <property name="text">
+                   <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;t&lt;span style=&quot; vertical-align:sub;&quot;&gt;min &lt;/span&gt;(%):&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QLabel" name="label_4">
+                  <property name="text">
+                   <string>SDR %:</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QSpinBox" name="spinBox_2"/>
                 </item>
                 <item>
                  <spacer name="pa_ida_results2">
