--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>NonLinearMainWindow</class>
+ <widget class="QMainWindow" name="NonLinearMainWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -35,7 +35,7 @@
         <item>
          <widget class="QTabWidget" name="twd_principal">
           <property name="currentIndex">
-           <number>7</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="tab_frame_data">
            <attribute name="title">
@@ -1059,6 +1059,13 @@ moment strength ratio:</string>
                          </layout>
                         </item>
                        </layout>
+                      </widget>
+                     </item>
+                     <item row="3" column="1">
+                      <widget class="QPushButton" name="btn_design">
+                       <property name="text">
+                        <string>Design</string>
+                       </property>
                       </widget>
                      </item>
                     </layout>
