--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -269,6 +269,36 @@
                          <verstretch>0</verstretch>
                         </sizepolicy>
                        </property>
+                       <item>
+                        <property name="text">
+                         <string>Spectra file</string>
+                        </property>
+                       </item>
+                       <item>
+                        <property name="text">
+                         <string>ASCE 7-16</string>
+                        </property>
+                       </item>
+                       <item>
+                        <property name="text">
+                         <string>NSR-10</string>
+                        </property>
+                       </item>
+                       <item>
+                        <property name="text">
+                         <string>NSR-98</string>
+                        </property>
+                       </item>
+                       <item>
+                        <property name="text">
+                         <string>CCCSR-84</string>
+                        </property>
+                       </item>
+                       <item>
+                        <property name="text">
+                         <string>Weight Percentage</string>
+                        </property>
+                       </item>
                       </widget>
                      </item>
                      <item row="1" column="1">
@@ -425,7 +455,7 @@
                        </layout>
                       </widget>
                      </item>
-                     <item row="4" column="1">
+                     <item row="5" column="1">
                       <widget class="QGroupBox" name="gbx_type_load_cccsr84_">
                        <property name="sizePolicy">
                         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -474,7 +504,7 @@
                        </layout>
                       </widget>
                      </item>
-                     <item row="5" column="1">
+                     <item row="6" column="1">
                       <widget class="QGroupBox" name="gbx_type_load_spectra_file_selector">
                        <property name="sizePolicy">
                         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -504,6 +534,29 @@
                              <string>Spect text file:</string>
                             </property>
                            </widget>
+                          </item>
+                         </layout>
+                        </item>
+                       </layout>
+                      </widget>
+                     </item>
+                     <item row="4" column="1">
+                      <widget class="QGroupBox" name="gbx_seismic_load_coefficient_percentage">
+                       <property name="title">
+                        <string>Seismic load coefficient, CS= Vb/W</string>
+                       </property>
+                       <layout class="QGridLayout" name="gridLayout_54">
+                        <item row="0" column="0">
+                         <layout class="QFormLayout" name="formLayout_6">
+                          <item row="0" column="0">
+                           <widget class="QLabel" name="lbx_seismic_load_coefficient_percentage">
+                            <property name="text">
+                             <string>%:</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="0" column="1">
+                           <widget class="QSpinBox" name="spx_seismic_load_coefficient_percentage"/>
                           </item>
                          </layout>
                         </item>
