--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -251,6 +251,9 @@
                   <layout class="QGridLayout" name="gridLayout_9">
                    <item row="0" column="0">
                     <layout class="QFormLayout" name="frm_type_load">
+                     <property name="horizontalSpacing">
+                      <number>10</number>
+                     </property>
                      <property name="topMargin">
                       <number>29</number>
                      </property>
@@ -303,6 +306,9 @@
                      </item>
                      <item row="1" column="1">
                       <widget class="QGroupBox" name="gbx_type_load_spectra_file_selector">
+                       <property name="enabled">
+                        <bool>true</bool>
+                       </property>
                        <property name="sizePolicy">
                         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                          <horstretch>0</horstretch>
